# njwt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION  index.js  package.json  tsconfig.json
.github/workflows/: test.yaml
include/njwt/: base64.hpp  njwt.hpp  njwt_base64.hpp  njwt_cmrc.hpp  njwt_version.hpp
include/njwt/base64/: base64.hpp
include/njwt/cmrc/: cmrc.hpp
lib/: njwt.node.d.ts  njwt.node.js  njwt.node.ts
share/cmake/Modules/: CMakeJS.cmake  CMakeRC.cmake  WriteVersionHeader.cmake
src/njwt/: njwt.cpp
src/njwt/base64/: base64.cpp
test/: hello.js  njwt_tests.cmake  version.js
